2001-11-27 Alexander Rawass <alexannika@users.sourceforge.net>

	* last fix to link for icc
	

2001-11-26 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* improved digital hatswitch code
	* fixes for compilation with intel c++
	

2001-11-22 Alexander Rawass <alexannika@users.sourceforge.net>

	* gethColor now correcly uses hexcolor argument
	* modified cmd/unit_xml and cmd/terrain to use gethColor instead of getColor
	* digital hatswitch first try
	

2001-11-19 Daniel Horn <hellcatv@hotmail.com>
	* added terrain config file
	* added texturemap .png image to specify which texture to use
	* added heightmap .png image
	* added png support (soon to port to aux_texture once the cwd stuff is in)
	

2001-11-17 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified vegastrike.h to have SIMULATION_ATOM as a define
	  that uses the float simulation_atom_var
	* modified vs_path.cpp to init simulation_atom_var with
	  'simulation_atom' from the config file
	* added simulation_atom in section general to the config file
	

2001-11-16 Alexander Rawass <alexannika@users.sourceforge.net>

	* uncommented AC_LANG_CPLUSPLUS in configure.in

	
2001-11-11 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added mission_script.cpp,script_*.cpp to src/Makefile.am
	* added script_expression.cpp, script_statement.cpp
	

2001-11-09 Alexander Rawass <alexannika@users.sourceforge.net>

	* added #ifdef HAVE_AL to the volume callbacks
	

2001-11-09 Alexander Rawass <alexannika@users.sourceforge.net>

	* modified config_xml to have variable subsections
	* modified missions to have a settings section
	* modified missions to have an origin inside settings
	* modified star_system to take three args (3rd: planetname)
	* modified Universe::Init to take those args
	* modified main.cpp to use the new Universe::Init
	
	
2001-11-08 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified vegastrike.spec
	* added data/vegastrike-data.spec